# hildon-input-method-configurator

./: Makefile.am  configure.ac
debian/: changelog  control  hildon-input-method-configurator.xsession  postinst  rules
src/: Makefile.am  configurator.c  hildon-im-convert-restored-gconf.c
